# embedded-motor-pid-controller

./: .gitignore  ANALYSIS_ISSUE_17.md  CHANGELOG.md  CMakeLists.txt  DOCUMENTATION_DEPLOYMENT_GUIDE.md  Doxyfile  Doxyfile.bak  LICENSE  QUALITY_ASSURANCE_SUMMARY.md  README.md  REVIEW_FINDINGS.md  quality_check.sh  requirements.txt
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  quality-gate.yml
docs/: BUILD.md  IMPROVEMENTS.md  _config.yml  architecture.md  build.md  ci.md  doxygen-custom.css  doxygen-header.html  index.md
docs/api/: README.md
docs/api/html/: annotated.html  classes.html  dir_000002_000001.html  dir_c898ccd6027d5da3247aa855d21ca2cf.html  dir_c898ccd6027d5da3247aa855d21ca2cf_dep.dot  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.html  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.dot  dir_e8eb43238681f7e6a184956a147fbc3b.html  dir_e8eb43238681f7e6a184956a147fbc3b_dep.dot  doxygen_crawl.html  files.html  functions.html  globals.html  (+44 more)
firmware/include/: motor.h  pid.h
firmware/src/: main.c  motor.c  pid.c
html/: README_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  dir_000002_000001.html  dir_c898ccd6027d5da3247aa855d21ca2cf.html  dir_c898ccd6027d5da3247aa855d21ca2cf.js  dir_c898ccd6027d5da3247aa855d21ca2cf_dep.map  dir_c898ccd6027d5da3247aa855d21ca2cf_dep.md5  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.html  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.js  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.map  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.md5  dir_e8eb43238681f7e6a184956a147fbc3b.html  dir_e8eb43238681f7e6a184956a147fbc3b.js  dir_e8eb43238681f7e6a184956a147fbc3b_dep.map  dir_e8eb43238681f7e6a184956a147fbc3b_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8c.html  main_8c.js  main_8c__incl.map  main_8c__incl.md5  main_8c_a840291bc02cba5474a4cb46a9b9566fe_cgraph.map  main_8c_a840291bc02cba5474a4cb46a9b9566fe_cgraph.md5  main_8c_source.html  md_README.html  md__r_e_a_d_m_e.html  motor_8c.html  motor_8c.js  motor_8c__incl.map  motor_8c__incl.md5  (+43 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_3.js  functions_2.js  pages_0.js  pages_1.js  pages_10.js  pages_12.js  pages_13.js  pages_16.js  pages_1a.js  pages_1b.js  pages_1c.js  pages_2.js  (+12 more)
sim/: pid_simulation.py
tests/: test_pid.c
(+36 files in other folders)
